--- a/index.html
+++ b/index.html
@@ -1,4 +1,8 @@
 ---
 layout: single
+header: 
+   image: /assets/images/opcao1.png  
+   image-description: "This is the best image a got" 
+   caption: "Photo caption"
 author_profile: true
 ---
