--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
-layout: single
+layout: splash 
 header: 
-   image: /assets/images/opcao1.png  
+   image: /assets/images/front1.png  
    image-description: "This is the best image a got" 
    caption: "Photo caption"
 author_profile: true
