--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
 ---
 layout: splash 
 header: 
-   image: /assets/images/front1.png  
+   overlay_image: /assets/images/front1.png  
+   overlay_filter: 0.7
    image-description: "This is the best image a got" 
    caption: "Photo caption"
+   excerpt: "Texto explicativo"
+intro:
+   excerpt: "Texto da intro"
 author_profile: true
 ---
