--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@ header:
    overlay_image: /assets/images/front1.png  
    overlay_filter: 0.7
    image-description: "This is the best image a got" 
-   caption: "Photo caption"
+   caption: "Eu no museu ... n"
    excerpt: "Texto explicativo"
 intro:
    excerpt: "Texto da intro"
