--- a/index.html
+++ b/index.html
@@ -8,5 +8,15 @@ header:
    excerpt: "Texto explicativo"
 intro:
    excerpt: "Texto da intro"
-author_profile: true
+excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop"
+intro: 
+   excerpt: "intro intro intro intro intro"
+feature_row:
+   image_path: /assets/images/flor.png
+   title: "flor"
+   excerpt: "este é uma flor"
+   image_path: /assets/images/code.png
+   title: "code SP"
+   excerpt: "code SP é legal"
+
 ---
