--- a/index.html
+++ b/index.html
@@ -6,17 +6,19 @@ header:
    image-description: "This is the best image a got" 
    caption: "Eu no museu ... n"
    excerpt: "Texto explicativo"
-intro:
-   excerpt: "Texto da intro"
 excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop"
 intro: 
    excerpt: "intro intro intro intro intro"
 feature_row:
-   image_path: /assets/images/flor.png
-   title: "flor"
-   excerpt: "este é uma flor"
-   image_path: /assets/images/code.png
-   title: "code SP"
-   excerpt: "code SP é legal"
-
+   - image_path: /assets/images/flor.png
+     title: "flor"
+     excerpt: "este é uma flor"
+   - image_path: /assets/images/code.png
+     title: "code SP"
+     excerpt: "code SP é legal"
+   - image_path: /assets/images/front1.png
+     title: "front"
+     excerpt: "front front"
 ---
+{% include feature_row %}
+
