corrections feature rows

--- a/index.html
+++ b/index.html
@@ -20,5 +20,7 @@ feature_row:
      title: "front"
      excerpt: "front front"
 ---
+{% include feature_row id="intro" type="center"%}
 {% include feature_row %}
+
 
