--- a/index.html
+++ b/index.html
@@ -1,26 +1,33 @@
 ---
+title: "My Page"
 layout: splash 
 header: 
+   overlay_color: "#000"
    overlay_image: /assets/images/front1.png  
-   overlay_filter: 0.7
+   overlay_filter: "0.7"
    image-description: "This is the best image a got" 
    caption: "Eu no museu ... n"
-   excerpt: "Texto explicativo"
 excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop"
+   - excerpt: 'nula nula nula"
 intro: 
-   excerpt: "intro intro intro intro intro"
+   - excerpt: "intro intro intro intro intro"
 feature_row:
    - image_path: /assets/images/flor.png
+     alt: "flor"
      title: "flor"
      excerpt: "este é uma flor"
-   - image_path: /assets/images/code.png
+   - image_path: /assets/images/code1.png
+     alt: "code"
      title: "code SP"
      excerpt: "code SP é legal"
    - image_path: /assets/images/front1.png
+     alt: "front"
      title: "front"
      excerpt: "front front"
 ---
+
 {% include feature_row id="intro" type="center"%}
+
 {% include feature_row %}
 
 
