--- a/index.html
+++ b/index.html
@@ -7,16 +7,17 @@ header:
    overlay_filter: "0.7"
    image-description: "This is the best image a got" 
    caption: "Eu no museu ... n"
-excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop"
-   - excerpt: 'nula nula nula"
+   excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop"
+
 intro: 
-   - excerpt: "intro intro intro intro intro"
+   - excerpt: 'intro intro intro intro intro'
+
 feature_row:
    - image_path: /assets/images/flor.png
      alt: "flor"
      title: "flor"
      excerpt: "este é uma flor"
-   - image_path: /assets/images/code1.png
+   - image_path: /assets/images/flor.png
      alt: "code"
      title: "code SP"
      excerpt: "code SP é legal"
@@ -26,7 +27,7 @@ feature_row:
      excerpt: "front front"
 ---
 
-{% include feature_row id="intro" type="center"%}
+{% include feature_row id="intro" type="center" %}
 
 {% include feature_row %}
 
