--- a/index.html
+++ b/index.html
@@ -7,10 +7,10 @@ header:
    overlay_filter: "0.7"
    image-description: "This is the best image a got" 
    caption: "Eu no museu ... n"
-   excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop"
+excerpt: "Bacon ipsum dolor sit amet salami ham hock ham, hamburger corned beef short ribs kielbasa biltong t-bone drumstick tri-tip tail sirloin pork chop"
 
 intro: 
-   - excerpt: 'intro intro intro intro intro'
+   - excerpt: "intro intro intro intro intro"
 
 feature_row:
    - image_path: /assets/images/flor.png
